--- a/roles/taiga/defaults/main.yaml
+++ b/roles/taiga/defaults/main.yaml
@@ -1,21 +1,21 @@
 ---
 
 # Taiga connection
-taiga_port: 8080
+taiga_server_port: 8080
 taiga_server_ip: hostvars[matrix]['ansible_default_ipv4']['address'] # matrix IP
+taiga_server_ip_v6: hostvars[inventory_hostname]['ansible_default_ipv6']['address']
 
-# Taiga user / folder structure
+# Taiga user / folder structure / .venv
 taiga_user: taiga
-taiga_folder_front: "/home/{{taiga_username}}/taiga-front-dist"
-taiga_folder_back: "/home/{{taiga_username}}/taiga-back"
+taiga_folder_front: "/home/{{ taiga_user }}/taiga-front-dist"
+taiga_folder_back: "/home/{{ taiga_user }}/taiga-back"
+taiga_venv: "/home/{{ taiga_user }}/.venv"
 
 # Taiga database settings
-taiga_database_user: taiga
+taiga_database_user: "{{ taiga_user }}" # should match with taiga_user! since postgres uses peer login
 taiga_database_name: taiga
 
 
 # GitHub repositories
 taiga_back_repo: https://github.com/stu-ba/taiga-back.git
 taiga_front_dist_repo: https://github.com/stu-ba/taiga-front-dist.git
-
-venv_python: "/home/{{taiga_user}}/.venv/bin/python3.5"
