--- a/ansible.cfg
+++ b/ansible.cfg
@@ -18,7 +18,7 @@ inventory      = ./inventory
 #local_tmp      = ~/.ansible/tmp
 #forks          = 5
 #poll_interval  = 15
-#sudo_user      = root
+sudo_user      = neo
 #ask_sudo_pass = True
 #ask_pass      = True
 #transport      = smart
