--- a/roles/common/tasks/nginx.yaml
+++ b/roles/common/tasks/nginx.yaml
@@ -4,6 +4,7 @@
   become: yes
   apt: pkg=nginx state=present update_cache=no
   notify: start nginx
+  tags: [apt]
 
 - name: disable default config
   become: yes
