--- a/roles/common/defaults/main.yaml
+++ b/roles/common/defaults/main.yaml
@@ -1,3 +1,4 @@
 ---
-sudo_user: neo #is also set in ansible.cfg
+# sudo_user is also set in ansible.cfg
+sudo_user: neo 
 composer_path: /usr/local/bin/composer
