Implement systemd as service manager
 - systemd - gunicorn (daemonized)
 - circusd - gunicorn (non daemonized)

--- a/roles/taiga/defaults/main.yaml
+++ b/roles/taiga/defaults/main.yaml
@@ -21,3 +21,5 @@ taiga_database_name: taiga
 # GitHub repositories (always stable branch)
 taiga_back_repo: https://github.com/stu-ba/taiga-back.git
 taiga_front_dist_repo: https://github.com/stu-ba/taiga-front-dist.git
+
+service_manager: systemd #or circus
