--- a/roles/common/handlers/main.yaml
+++ b/roles/common/handlers/main.yaml
@@ -1,46 +1,46 @@
 - name: start postgresql
   become: yes
-  service: name=postgresql state=started
+  systemd: name=postgresql state=started
 
 - name: restart postgresql
   become: yes
-  service: name=postgresql state=restarted
+  systemd: name=postgresql state=restarted
 
 - name: start nginx
   become: yes
-  service: name=nginx state=started
+  systemd: name=nginx state=started
 
 - name: reload nginx
   become: yes
-  service: name=nginx state=reloaded
+  systemd: name=nginx state=reloaded
 
 - name: restart nginx
   become: yes
-  service: name=nginx state=restarted
+  systemd: name=nginx state=restarted
 
 - name: start php7.1-fpm
   become: yes
-  service: name=nginx state=started
+  systemd: name=nginx state=started
 
 - name: restart php7.1-fpm
   become: yes
-  service: name=nginx state=restarted
+  systemd: name=nginx state=restarted
 
 - name: start redis-server
   become: yes
-  service: name=redis-server state=started
+  systemd: name=redis-server state=started
 
 - name: restart redis-server
   become: yes
-  service: name=redis-server state=restarted
+  systemd: name=redis-server state=restarted
 
 - name: start iptables-persistent
   become: yes
-  service: name=netfilter-persistent state=started
+  systemd: name=netfilter-persistent state=started
 
 - name: restart iptables-persistent
   become: yes
-  service: name=netfilter-persistent state=restarted
+  systemd: name=netfilter-persistent state=restarted
 
 - name: reconfigure iptables-persistant
   become: yes
