--- a/ansible.cfg
+++ b/ansible.cfg
@@ -18,7 +18,7 @@ inventory      = ./inventory
 #local_tmp      = ~/.ansible/tmp
 #forks          = 5
 #poll_interval  = 15
-sudo_user      = neo
+#sudo_user      = root
 #ask_sudo_pass = True
 #ask_pass      = True
 #transport      = smart
@@ -32,7 +32,7 @@ sudo_user      = neo
 # smart - gather by default, but don't regather if already gathered
 # implicit - gather by default, turn off with gather_facts: False
 # explicit - do not gather by default, must say gather_facts: True
-gathering = explicit
+gathering = smart
 
 # This only affects the gathering done by a play's gather_facts directive,
 # by default gathering retrieves all facts subsets
@@ -45,7 +45,7 @@ gathering = explicit
 # You can combine them using comma (ex: network,virtual)
 # You can negate them using ! (ex: !hardware,!facter,!ohai)
 # A minimal set of facts is always gathered.
-#gather_subset = all
+gather_subset = network
 
 # some hardware related facts are collected
 # with a maximum timeout of 10 seconds. This
@@ -229,7 +229,7 @@ gather_timeout = 5
 # You can disable this feature by setting retry_files_enabled to False
 # and you can change the location of the files by setting retry_files_save_path
 
-#retry_files_enabled = False
+retry_files_enabled = False
 #retry_files_save_path = ~/.ansible-retry
 
 # squash actions
@@ -282,7 +282,7 @@ gather_timeout = 5
 
 # Controlls which files to ignore when using a directory as inventory with
 # possibly multiple sources (both static and dynamic)
-#inventory_ignore_extensions = ~, .orig, .bak, .ini, .cfg, .retry, .pyc, .pyo
+inventory_ignore_extensions = ~, .orig, .bak, .ini, .cfg, .retry, .pyc, .pyo
 
 [privilege_escalation]
 #become=True
