--- a/roles/common/tasks/nginx.yaml
+++ b/roles/common/tasks/nginx.yaml
@@ -2,11 +2,16 @@
 
 - name: install nginx
   become: yes
-  apt: pkg=nginx state=present update_cache=no
+  apt: 
+    name: nginx 
+    state: present
   notify: start nginx
   tags: [apt]
 
 - name: disable default config
   become: yes
-  file: dest=/etc/nginx/sites-enabled/default state=absent
-  notify: reload nginx
+  file: 
+    dest: /etc/nginx/sites-enabled/default
+    state: absent
+  notify: 
+    - reload nginx
