--- a/roles/common/tasks/php71-fpm.yaml
+++ b/roles/common/tasks/php71-fpm.yaml
@@ -2,7 +2,9 @@
 
 - name: install php7.1-fpm dependencies
   become: yes
-  apt: pkg="{{ item }}" state=latest
+  apt: 
+    name: "{{ item }}"
+    state: latest
   with_items:
     - apt-transport-https
     - lsb-release
@@ -25,9 +27,12 @@
 
 - name: install php7.1 and php7.1-fpm
   become: yes
-  apt: pkg="{{ item }}" state=present update_cache=no
+  apt: 
+    name: "{{ item }}" 
+    state: present
   with_items:
     - php7.1
     - php7.1-fpm
-  notify: start php7.1-fpm
+  notify: 
+    - start php7.1-fpm
   tags: [apt]
