--- a/roles/yap/tasks/nginx.yaml
+++ b/roles/yap/tasks/nginx.yaml
@@ -1,9 +1,16 @@
-- name: add yap site config
-  template: src=yap.j2 dest=/etc/nginx/sites-available/yap owner=root group=root
-  tags: [yap, nginx, configuration]
-
-- name: enable yap site config
-  file: src=/etc/nginx/sites-available/yap dest=/etc/nginx/sites-enabled/yap state=link
+- name: add yap site
+  become: yes
+  template:
+    src: "{{ role_path }}/templates/etc/nginx/sites-available/yap.j2"
+    dest: "/etc/nginx/sites-available/yap"
   notify:
     - reload nginx
-  tags: [yap, nginx, configuration]
+
+- name: enable yap site config
+  become: yes
+  file: 
+    src: /etc/nginx/sites-available/yap
+    dest: /etc/nginx/sites-enabled/yap 
+    state: link
+  notify:
+    - reload nginx
