--- a/roles/common/tasks/iptables.yaml
+++ b/roles/common/tasks/iptables.yaml
@@ -14,7 +14,7 @@
     chain: INPUT
     in_interface: lo
     jump: ACCEPT
-  notify: reconfigure iptables-persistant
+  notify: [reconfigure iptables-persistant]
 
 - name: allow/keep current related/established rules (current SSH connection)
   become: yes
@@ -24,7 +24,7 @@
     #https://github.com/ansible/ansible-modules-extras/issues/1209
     ctstate: ['RELATED', 'ESTABLISHED']
     jump: ACCEPT
-  notify: reconfigure iptables-persistant
+  notify: [reconfigure iptables-persistant]
 
 - name: allow SSH connections
   become: yes
@@ -33,11 +33,11 @@
     protocol: tcp
     destination_port: 22
     jump: ACCEPT
-  notify: reconfigure iptables-persistant
+  notify: [reconfigure iptables-persistant]
 
 - name: make INPUT chain default to DROP
   become: yes
   iptables: 
     chain: INPUT
     policy: DROP
-  notify: reconfigure iptables-persistant
+  notify: [reconfigure iptables-persistant]
