--- a/roles/common/tasks/nginx.yaml
+++ b/roles/common/tasks/nginx.yaml
@@ -5,7 +5,7 @@
   apt: 
     name: nginx 
     state: present
-  notify: start nginx
+  notify: [start nginx]
   tags: [apt]
 
 - name: disable default config
@@ -13,5 +13,37 @@
   file: 
     dest: /etc/nginx/sites-enabled/default
     state: absent
-  notify: 
-    - reload nginx
+  notify: [reload nginx]
+
+- name: add H5BP config
+  become: yes
+  copy:
+    src: "{{ role_path }}/files/etc/nginx/h5bp"
+    dest: /etc/nginx
+    owner: root
+    group: root
+  notify: [reload nginx]
+  tags: [h5bp]
+
+- name: update nginx.conf
+  become: yes
+  copy:
+    src: "{{ role_path }}/files/etc/nginx/nginx.conf"
+    dest: /etc/nginx/nginx.conf
+    owner: root
+    group: root
+    mode: 0644
+    backup: yes
+  notify: [reload nginx]
+
+- name: update nginx mime.types
+  become: yes
+  copy:
+    src: "{{ role_path }}/files/etc/nginx/mime.types"
+    dest: /etc/nginx/mime.types
+    owner: root
+    group: root
+    mode: 0644
+    backup: yes
+  notify: [reload nginx]
+
