--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -48,6 +48,9 @@
     - curl
   tags: [apt]
 
+- include: "{{ role_path }}/tasks/ntp.yaml" 
+  tags: [ntp, common]
+
 - include: "{{ role_path }}/tasks/nginx.yaml" 
   tags: [nginx, nginx-install, common]
 
