--- a/roles/common/tasks/php71-fpm.yaml
+++ b/roles/common/tasks/php71-fpm.yaml
@@ -25,7 +25,7 @@
     update-cache: yes
   tags: [apt]
 
-- name: install php7.1 and php7.1-fpm
+- name: install php7.1 and php7.1-fpm (and extensions)
   become: yes
   apt: 
     name: "{{ item }}" 
@@ -33,6 +33,9 @@
   with_items:
     - php7.1
     - php7.1-fpm
+    - php7.1-mbstring
+    - php7.1-pgsql
+    # - php7.1-xml # for development only (PhpUnit requires this)
   notify: 
     - start php7.1-fpm
   tags: [apt]
