Update taiga front to use taiga-yap branch

--- a/roles/taiga/tasks/taiga-front.yaml
+++ b/roles/taiga/tasks/taiga-front.yaml
@@ -4,7 +4,7 @@
   become: yes
   git:
     repo: "{{ taiga_front_dist_repo }}"
-    version: stable
+    version: taiga-yap
     dest: "{{ taiga_folder_front }}"
 
 - name: configure settings
