--- a/roles/taiga/tasks/taiga-front.yaml
+++ b/roles/taiga/tasks/taiga-front.yaml
@@ -4,7 +4,7 @@
   become: yes
   git:
     repo: "{{ taiga_front_dist_repo }}"
-    version: taiga-yap
+    version: yap-stable
     dest: "{{ taiga_folder_front }}"
 
 - name: configure settings
