--- a/ansible.cfg
+++ b/ansible.cfg
@@ -45,7 +45,7 @@ gathering = smart
 # You can combine them using comma (ex: network,virtual)
 # You can negate them using ! (ex: !hardware,!facter,!ohai)
 # A minimal set of facts is always gathered.
-gather_subset = network
+gather_subset = network,hardware
 
 # some hardware related facts are collected
 # with a maximum timeout of 10 seconds. This
