Update php-fpm configuration
 - add yap pool instead of default www pool
   - solves issues with permissions
   - introduces problem with permissions (now pool has rights as `yap`)
 - improve systemd unit file, now php-fpm is part of nginx
   - also copy unit to nginx.service.wants folder
 - update nginx configuration to use socket

--- a/roles/common/tasks/nginx.yaml
+++ b/roles/common/tasks/nginx.yaml
@@ -47,3 +47,8 @@
     backup: yes
   notify: [reload nginx]
 
+- name: create nginx.service.wants folder
+  become: yes
+  file:
+    name: /etc/systemd/system/nginx.service.wants
+    state: directory
