--- a/roles/common/tasks/php71-fpm.yaml
+++ b/roles/common/tasks/php71-fpm.yaml
@@ -35,7 +35,25 @@
     - php7.1-fpm
     - php7.1-mbstring
     - php7.1-pgsql
-    # - php7.1-xml # for development only (PhpUnit requires this)
+    - php7.1-xml
+    - php7.1-curl
   notify: 
     - start php7.1-fpm
   tags: [apt]
+
+- name: copy php7.1 service
+  become: yes
+  template:
+    src: "{{ role_path }}/templates/etc/systemd/system/php7.1-fpm.service.j2"
+    dest: /etc/systemd/system/php7.1-fpm.service
+  notify: 
+    - restart php7.1-fpm
+  tags: [service-manager]
+
+- name: add php7.1-fpm service to nginx wants folder
+  become: yes
+  file: 
+    src: /etc/systemd/system/php7.1-fpm.service
+    dest: /etc/systemd/system/nginx.service.wants/php7.1-fpm.service
+    state: link
+  tags: [service-manager]
