--- a/roles/yap/tasks/queue.yaml
+++ b/roles/yap/tasks/queue.yaml
@@ -11,6 +11,13 @@
     src: "{{ role_path }}/templates/etc/systemd/system/yap-queue.target.j2"
     dest: /etc/systemd/system/yap-queue.target
 
+- name: add yap-queue target to postgresql wants folder
+  become: yes
+  file: 
+    src: /etc/systemd/system/yap-queue.target
+    dest: /etc/systemd/system/postgresql.service.wants/yap-queue.target
+    state: link
+
 - name: copy yap-queue service config
   become: yes
   template:
