Create postgresql.service.wants folder (and touch empty file)
 - later we add circus.service, taiga.service and yap-queue.target

--- a/roles/common/tasks/postgresql.yaml
+++ b/roles/common/tasks/postgresql.yaml
@@ -15,3 +15,16 @@
   notify: 
     - start postgresql
   tags: [apt]
+
+- name: create postgresql.service.wants folder
+  become: yes
+  file:
+    name: /etc/systemd/system/postgresql.service.wants
+    state: directory
+
+- name: touch empty file for postgresql.service.wants folder
+  become: yes
+  file:
+    name: /etc/systemd/system/postgresql.service.wants/empty
+    state: touch
+    
